--- a/test/fixtures/raids.yml
+++ b/test/fixtures/raids.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+# Schema version: 20081217001941
+#
+# Table name: raids
+#
+#  id         :integer(4)      not null, primary key
+#  date       :date
+#  note       :string(255)
+#  thread     :integer(4)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 # one:
