--- a/test/fixtures/members.yml
+++ b/test/fixtures/members.yml
@@ -1,5 +1,5 @@
 # == Schema Information
-# Schema version: 20081217001941
+# Schema version: 20090112080555
 #
 # Table name: members
 #
@@ -18,6 +18,7 @@
 #  attendance_lifetime :float           default(0.0)
 #  created_at          :datetime
 #  updated_at          :datetime
+#  uncached_updates    :integer(4)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
