--- a/test/fixtures/raids.yml
+++ b/test/fixtures/raids.yml
@@ -13,8 +13,14 @@
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# one:
-#   column: value
-#
-# two:
-#   column: value
+today:
+  date: <%= 5.hours.ago.to_s :db %>
+  note: Raid from five hours ago
+
+yesterday:
+  date: <%= 1.day.ago.to_s :db %>
+  note: Raid from last night
+  
+two_months_ago:
+  date: <%= 2.months.ago.to_s :db %>
+  note: Raid from two months ago
