--- a/test/fixtures/raids.yml
+++ b/test/fixtures/raids.yml
@@ -1,14 +1,16 @@
 # == Schema Information
-# Schema version: 20090112080555
+# Schema version: 20090113041939
 #
 # Table name: raids
 #
-#  id         :integer(4)      not null, primary key
-#  date       :date
-#  note       :string(255)
-#  thread     :integer(4)
-#  created_at :datetime
-#  updated_at :datetime
+#  id              :integer(4)      not null, primary key
+#  date            :date
+#  note            :string(255)
+#  thread          :integer(4)
+#  created_at      :datetime
+#  updated_at      :datetime
+#  items_count     :integer(4)      default(0)
+#  attendees_count :integer(4)      default(0)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
