- Add a 'rot' column to Items similar to best_in_slot and situational
- Rather than directly setting the item's value to 0.50 for rots, it gets the real value and just gets returned as 0.50 by item.adjusted_price
- Implement Item.from_attendance_output which takes a single line from JuggyAttendance loot output and returns an array of initialized items with its buyer; with corresponding tests

--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -14,18 +14,12 @@
 #  updated_at   :datetime
 #
 
-# == Schema Information
-# Schema version: 20090112080555
-#
-# Table name: items
-#
-#  id           :integer(4)      not null, primary key
-#  name         :string(255)
-#  price        :float           default(0.0)
-#  situational  :boolean(1)
-#  best_in_slot :boolean(1)
-#  member_id    :integer(4)
-#  raid_id      :integer(4)
-#  created_at   :datetime
-#  updated_at   :datetime
-#
+rot:
+  name: Rotted Item
+  price: 3.00
+  rot: true
+
+best_in_slot:
+  name: Best In Slot
+  price: 40.00
+  best_in_slot: true
