--- a/spec/fixtures/punishments.yml
+++ b/spec/fixtures/punishments.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+# Schema version: 20090213233547
+#
+# Table name: punishments
+#
+#  id         :integer(4)      not null, primary key
+#  member_id  :integer(4)
+#  reason     :string(255)
+#  expires    :date
+#  value      :float           default(0.0)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 late:
   reason: Late without post
   expires: <%= 7.days.from_now %>
