--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,7 +3,7 @@
 # Rails applications with deep visibility and low overhead.  For more
 # information, visit www.newrelic.com.
 #
-# 
+# This configuration file is custom generated for rspeicher
 #
 # here are the settings that are common to all environments
 common: &default_settings
@@ -12,7 +12,7 @@ common: &default_settings
   # You must specify the licence key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic RPM service.
-  license_key: 'PASTE_YOUR_KEY_HERE'
+  license_key: '7f7b739d0cc8836a2fc861d8f7252728b4b0eb76'
   
   # Agent Enabled
   # Use this setting to force the agent to run or not run.
@@ -31,7 +31,7 @@ common: &default_settings
   # "All UI" then specify a semicolon separated list of up to three
   # distinct names.  This setting does not prevent you from manually
   # defining applications.
-  app_name: My Application
+  app_name: JuggRails
 
   # When 'enabled' is turned on, the agent collects performance data
   # by inserting lightweight tracers on key methods inside the rails
@@ -132,7 +132,7 @@ common: &default_settings
     # Error collector is enabled by default. Set this to false to turn
     # it off. This feature is only available at the Silver and above
     # product levels
-    enabled: true
+    enabled: false
     
     # Tells error collector whether or not to capture a source snippet
     # around the place of the error when errors are View related.
@@ -155,7 +155,7 @@ common: &default_settings
 
 development:
   <<: *default_settings
-  # Turn off communication to RPM service in development mode.  
+  # turn off communication to RPM service in development mode.  
   # NOTE: for initial evaluation purposes, you may want to temporarily 
   # turn the agent on in development mode.
   enabled: false
@@ -186,4 +186,4 @@ production:
 staging:
   <<: *default_settings
   enabled: true
-  app_name: My Application (Staging)
+  app_name: JuggRails (Staging)
